// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.peer-budget-parallel-l1.acceptance given: [journey] parallel L1: L2 awaits ALL L1s when: [t0] artifact created, both L1s run, L2 awaits then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: alpha-checker (l1, 1/5)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.given.by_peer.alpha-checker.md
   │   └─ taken: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.taken.by_self.alpha-checker.md
   │
   ├─ r2: beta-checker (l1, 1/5)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r002._.given.by_peer.beta-checker.md
   │   └─ taken: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r002._.taken.by_self.beta-checker.md
   │
   ├─ r3: final-checker (l2, 0/5)
   │   └─ awaits arrival
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (2 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: alpha-checker (l1, 1/5)
      │   │   ├─ rejected [TIME]
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.given.by_peer.alpha-checker.md
      │   │   └─ taken: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.taken.by_self.alpha-checker.md
      │   ├─ r2: beta-checker (l1, 1/5)
      │   │   ├─ rejected [TIME]
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r002._.given.by_peer.beta-checker.md
      │   │   └─ taken: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r002._.taken.by_self.beta-checker.md
      │   └─ r3: final-checker (l2, 0/5)
      │       └─ awaits l1 terminal
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (2 > 0)
"
`;

exports[`driver.route.peer-budget-parallel-l1.acceptance given: [journey] parallel L1: L2 awaits ALL L1s when: [t1] alpha passes but beta fails, L2 STILL awaits then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: alpha-checker (l1, 2/5)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.alpha-checker.md
   │   └─ taken: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.alpha-checker.md
   │
   ├─ r2: beta-checker (l1, 2/5)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r002._.given.by_peer.beta-checker.md
   │   └─ taken: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r002._.taken.by_self.beta-checker.md
   │
   ├─ r3: final-checker (l2, 0/5)
   │   └─ awaits arrival
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: alpha-checker (l1, 2/5)
      │   │   ├─ approved [TIME]
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.alpha-checker.md
      │   │   └─ taken: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.alpha-checker.md
      │   ├─ r2: beta-checker (l1, 2/5)
      │   │   ├─ rejected [TIME]
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r002._.given.by_peer.beta-checker.md
      │   │   └─ taken: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r002._.taken.by_self.beta-checker.md
      │   └─ r3: final-checker (l2, 0/5)
      │       └─ awaits l1 terminal
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget-parallel-l1.acceptance given: [journey] parallel L1: L2 awaits ALL L1s when: [t2] both L1s pass, L2 unlocks then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: alpha-checker (l1, 3/5)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r001._.given.by_peer.alpha-checker.md
   │   └─ taken: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r001._.taken.by_self.alpha-checker.md
   │
   ├─ r2: beta-checker (l1, 3/5)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.given.by_peer.beta-checker.md
   │   └─ taken: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.taken.by_self.beta-checker.md
   │
   ├─ r3: final-checker (l2, 1/5)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r003._.given.by_peer.final-checker.md
   │   └─ taken: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r003._.taken.by_self.final-checker.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: alpha-checker (l1, 3/5)
      │   │   ├─ approved [TIME]
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r001._.given.by_peer.alpha-checker.md
      │   │   └─ taken: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r001._.taken.by_self.alpha-checker.md
      │   ├─ r2: beta-checker (l1, 3/5)
      │   │   ├─ approved [TIME]
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.given.by_peer.beta-checker.md
      │   │   └─ taken: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.taken.by_self.beta-checker.md
      │   └─ r3: final-checker (l2, 1/5)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r003._.given.by_peer.final-checker.md
      │       └─ taken: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r003._.taken.by_self.final-checker.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget-parallel-l1.acceptance given: [journey] parallel L1: L2 awaits ALL L1s when: [t3] L2 passes, stone passes then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: alpha-checker (l1, 4/5)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i004.d1bd0b8547352e6396.r001._.given.by_peer.alpha-checker.md
   │   └─ taken: .reviews/peer/1.vision._.review.i004.d1bd0b8547352e6396.r001._.taken.by_self.alpha-checker.md
   │
   ├─ r2: beta-checker (l1, 4/5)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i004.d1bd0b8547352e6396.r002._.given.by_peer.beta-checker.md
   │   └─ taken: .reviews/peer/1.vision._.review.i004.d1bd0b8547352e6396.r002._.taken.by_self.beta-checker.md
   │
   ├─ r3: final-checker (l2, 2/5)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i004.d1bd0b8547352e6396.r003._.given.by_peer.final-checker.md
   │   └─ taken: .reviews/peer/1.vision._.review.i004.d1bd0b8547352e6396.r003._.taken.by_self.final-checker.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ src/**/*.ts
   │  ├─ reviews
   │  │   ├─ r1: alpha-checker (l1, 4/5)
   │  │   │   ├─ approved [TIME]
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   ├─ given: .reviews/peer/1.vision._.review.i004.d1bd0b8547352e6396.r001._.given.by_peer.alpha-checker.md
   │  │   │   └─ taken: .reviews/peer/1.vision._.review.i004.d1bd0b8547352e6396.r001._.taken.by_self.alpha-checker.md
   │  │   ├─ r2: beta-checker (l1, 4/5)
   │  │   │   ├─ approved [TIME]
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   ├─ given: .reviews/peer/1.vision._.review.i004.d1bd0b8547352e6396.r002._.given.by_peer.beta-checker.md
   │  │   │   └─ taken: .reviews/peer/1.vision._.review.i004.d1bd0b8547352e6396.r002._.taken.by_self.beta-checker.md
   │  │   └─ r3: final-checker (l2, 2/5)
   │  │       ├─ approved [TIME]
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       ├─ given: .reviews/peer/1.vision._.review.i004.d1bd0b8547352e6396.r003._.given.by_peer.final-checker.md
   │  │       └─ taken: .reviews/peer/1.vision._.review.i004.d1bd0b8547352e6396.r003._.taken.by_self.final-checker.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;
